--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <img src="static/photo.jpeg" alt="picture of me smiling" height="200px">
         </div>
         <div class="info">
-            <p>Hello, I am Meetali Kapse. I am a Third Year Information Technology Student at Thadomal Shahani Engineering College. <br><br>
+            <p>Hello, I am Meetali Kapse. I am a <strong>Third Year Information Technology Student </strong>at <i>Thadomal Shahani Engineering College</i> .<br><br>
                 I am currently learning Front-End Development and UI/UX designing.
                 I am very passionate about designing for inclusion and bridging the gap between technology and human experiences. 
-                Currently serving the position of Design Head at IETE-TSEC, former to that 
+                Currently serving the position of <strong>Design Head</strong> at <i>IETE-TSEC</i>, former to that 
                 I was a design executive for last academic year where I collaborated with various other teams in my committee to
                 create posts for the Instagram page, website for our committee and banners for the flagship events.
                 I am also very passionate about expanding opportunities for underrepresented communities in computer science and creating solutions for real-world problems. 
                 <br><br>
-                I won the ERR_404 5.0 Hackathon with an all girls team, where I contributed it the designing and front-end of the project. I was awarded an scholarship from Kode With Klossy where I learned Web Development in a two-week coding intensive camp.
+                I won the <b>ERR_404 5.0 Hackathon</b> with an all girls team, where I contributed it the designing and front-end of the project. I was awarded an scholarship from <i>Kode With Klossy</i> where I learned Web Development in a two-week coding intensive camp.
                 I am constantly seeking new challenges and opportunities to grow as a designer and developer. If you share my passion for designing with purpose and making a difference through technology, I would love to connect and explore ways to collaborate.</p>
         </div>
         <di class="socialmedia">
