--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Working on it</title>
+    <title>First Aid Basics</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Vollkorn" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Parisienne&display=swap" rel="stylesheet"> -->
@@ -104,13 +104,12 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#basics" class="nav-link">Basics</a></li>
-              <li><a href="#contact" class="nav-link">Contact</a></li>
+              <li><a href="contact.html" class="nav-link">Contact</a></li>
               <!-- <li><a href="#" c></a></li> -->
             </ul>
           </div>
         </div>
       </nav>
-
       <div class="jumbotron">
         <div class="container">
           <h1>Learn about first aid</h1>      
@@ -181,32 +180,5 @@
         </div> -->
       </div>
 </div>
-
-      <div class="container contact-container" id="contact">
-        <h2 class="text-center">Contact Us</h2>
-        <div class="row">
-          <div class="col-sm-5">
-            <p>Contact us and we'll get back to you soon.</p>
-            <p><span class="glyphicon glyphicon-map-marker"></span>Mumbai, India</p>
-            <p><span class="glyphicon glyphicon-envelope"></span> basicfirstaid@gmail.com</p>
-          </div>
-          <div class="col-sm-7">
-            <div class="row">
-              <div class="col-sm-6 form-group">
-                <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-              </div>
-              <div class="col-sm-6 form-group">
-                <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-              </div>
-            </div>
-            <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-            <div class="row">
-              <div class="col-sm-12 form-group">
-                <button class="btn btn-default pull-right" type="submit">Send</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 </body>
 </html>
